--- a/Javacademy Week 2/bin/.gitignore
+++ b/Javacademy Week 2/bin/.gitignore
@@ -1,4 +1,6 @@
 /Set1.class
 /Set1withInput.class
-/Set2HomeworkSamples.class
 /Set2.class
+/Set2Homework.class
+/Set2HomeworkSamples.class
+/Set3.class
